# gimp

./: CHANGES  ChangeLog  INSTALL  Makefile  Makefile.in  Makefile.std  NEWS  README  aclocal.m4  archive  bmp.diff  config.h  config.h.in  config.h.std  configure  configure.in  gimp  gimp-2.0.pc  gimp-zip  gimprc  gimpthumb-2.0.pc  gimptool-2.0  gimptool-2.0.in  gimptool-win32.c  gimpui-2.0.pc  git-version.h  intltool-extract.in  intltool-merge.in  intltool-update.in  libtool
app/: .depend  Makefile  Makefile.in  Makefile.std  actionarea.c  actionarea.h  airbrush.c  airbrush.h  app-procs.c  appenv.h  autodialog.c  autodialog.h  bezier_select.c  bezier_select.h  blend.c  blend.h  boundary.c  boundary.h  brush_header.h  brush_select.c  brush_select.h  brushes.c  brushes.h  bucket_fill.c  bucket_fill.h  buildmenu.c  buildmenu.h  callbacks.c  callbacks.h  clone.c  clone.h  color_picker.c  color_picker.h  color_select.c  color_select.h  colormaps.c  colormaps.h  convolve.c  convolve.h  crop.c  (+117 more)
app-tools/: Makefile.in
brushes/: 11circle.gbr  11fhline.gbr  11fsquare.gbr  11fvline.gbr  11hline.gbr  11square.gbr  11vline.gbr  13circle.gbr  13fsquare.gbr  13square.gbr  15circle.gbr  17circle.gbr  19circle.gbr  3circle.gbr  3fhline.gbr  3fvline.gbr  3hline.gbr  3vline.gbr  5circle.gbr  5fhline.gbr  5fvline.gbr  5hline.gbr  5vline.gbr  7circle.gbr  7fhline.gbr  7fsquare.gbr  7fvline.gbr  7hline.gbr  7square.gbr  7vline.gbr  9circle.gbr  9fhline.gbr  9fsquare.gbr  9fvline.gbr  9hline.gbr  9square.gbr  9vline.gbr
cursors/: Makefile.in
data/: Makefile.in
debian/: .README.Debian.swp  NEWS  README.Debian  README.MIDI  README.debian  TODO  changelog  conffiles  control  control.in  copyright  dirs  extensions.Debian  gbp.conf  gimp-data.files  gimp-data.install  gimp-gnomevfs.postrm  gimp-gnomevfs.preinst  gimp-helpbrowser.files  gimp-nonfree.files  gimp-python.files  gimp-python.install  gimp-svg.files  gimp.1  gimp.copyright  gimp.docs  gimp.files  gimp.install  gimp.menu  gimp.preinst  gimp1.2.postrm  info  libgimp-dev.files  libgimp2.0-dev.files  libgimp2.0-dev.install  libgimp2.0-dev.postinst  libgimp2.0-dev.prerm  libgimp2.0.symbols  menu  preinst  (+4 more)
desktop/: Makefile.in  gimp-data-extras.metainfo.xml.in  org.gimp.GIMP.appdata.xml.in
devel-docs/: Makefile.in
docs/: Makefile.in  TODO  description  gimp  gimp-2.2.1  gimp-remote-2.2.1  gimp.html  gimp.texi  gimp_toc.html  gimprc-2.2.5  gimprc.5.in  gimptool-2.0.1  index.html  logo.html  paint_tools_doc
etc/: Makefile.in  gimprc
icons/: Makefile.in
libgimp/: Makefile.in  gimpenums.c  gimpfeatures.h  gimpplugin_pdb.h  gimpuimarshal.c  gimpuimarshal.h
libgimpbase/: Makefile.in  gimpsignal.c  gimpversion.h
libgimpcolor/: Makefile.in
libgimpconfig/: Makefile.in
libgimpmath/: Makefile.in
libgimpmodule/: Makefile.in
libgimpthumb/: Makefile.in  gimpthumb-enums.c
libgimpwidgets/: Makefile.in  gimp-wilber-pixbufs.h  gimpwidgetsmarshal.c  gimpwidgetsmarshal.h
m4macros/: Makefile.in
menus/: Makefile.in  dockable-menu.xml  image-menu.xml  toolbox-menu.xml
modules/: Makefile.in
pdb/: Makefile.in
plug-ins/: .depend  Makefile.in  Makefile.make  Makefile.orig  Makefile.std  Makefile.std.orig  add.c  bleed.c  (+42 more)
(+1579 files in other folders)
